Minor changes to J_OPTS, start of perms to move to S6...